<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="facebook_app_id">323952681287686</string>
    <string name="fb_login_protocol_scheme">fb323952681287686</string>
    <string name="app_name" tools:ignore="MissingTranslation">Phượt Ngay</string>
    <string name="app_author" tools:ignore="MissingTranslation"> &#169; YosTa 2016 </string>

    <string name="str_notify_connected"> Connected </string>
    <string name="str_notify_email_existed"> Someone already has that email! </string>
    <string name="str_notify_err_pass_not_match">These passwords do not match.</string>
    <string name="str_notify_err_wrong_user_pass"> The email and password you entered do not match. </string>
    <string name="str_notify_err_no_favorite_events"> There are no favorite events. </string>

    <string name="str_action_confirm_log_out"> Are you sure you want to log out? </string>
    <string name="str_action_confirm_password"> Confirm password </string>
    <string name="str_action_login_comeback"> Already a member? Login </string>
    <string name="str_action_choose_page"> Page number? </string>
    <string name="str_action_change_language_title"> Change your language </string>
    <string name="str_action_change_language_message"> Select an option. This app will exit to apply your choice. </string>
    <string name="str_action_find_nearby_events"> Find nearby events </string>
    <string name="str_action_create_events"> Create events </string>
    <string name="str_action_find_nearby_friends"> Find nearby friends </string>
    <string name="str_action_turn_gps_on"> Please turn on GPS to get more events </string>
    <string name="str_action_search_hint"> Search your events </string>
    <string name="str_action_check_network"> Please check your network connection</string>


    <string name="str_version" tools:ignore="MissingTranslation">Version</string>
    <string name="str_free" tools:ignore="MissingTranslation"> FREE </string>
    <string name="str_refresh" tools:ignore="MissingTranslation"> Refresh  </string>
    <string name="str_email"> Email </string>
    <string name="str_password"> Password </string>

    <string name="str_basic_settings">Basic settings</string>

    <string name="profile">Profile</string>
    <string name="str_home">Home</string>
    <string name="str_login"> Login </string>
    <string name="str_register">Register </string>

    <string name="str_sign_up">Sign Up</string>
    <string name="str_logout">Log out</string>
    <string name="str_info_categories"> Categories </string>
    <string name="str_search"> Search </string>
    <string name="str_terms"> Terms &amp; Policies </string>
    <string name="str_about"> About </string>
    <string name="str_help"> Help Center</string>
    <string name="str_account"> Account </string>
    <string name="str_review"> Review </string>
    <string name="str_invite"> Invite </string>
    <string name="str_follow"> Follow </string>
    <string name="str_followed"> Followed </string>
    <string name="str_report"> Report problems </string>
    <string name="str_host_by"> Host by </string>
    <string name="str_language"> Language </string>
    <string name="str_notification"> Notification </string>
    <string name="str_exit"> Exit now </string>
    <string name="str_forgotPwd">Forgot password?</string>

    <string name="str_vi"> Vietnamese </string>
    <string name="str_en"> English </string>

    <string name="str_wifi"> Wifi </string>
    <string name="str_3g"> 3G </string>

    <string name="str_use_location"> Use location  </string>
    <string name="str_location"> Location </string>
    <string name="str_remove_location"> Remove your location </string>
    <string name="str_gps_on"> GPS is on </string>
    <string name="str_gps_off"> GPS is off </string>
    <string name="str_access_sync">Access every where</string>
    <string name="str_auto_sync">Auto sync</string>
    <string name="message_login_stay"> Log in to <b>EventHub</b> to see all events.</string>
    <string name="message_login"><i>Stay connected to see all events your friends are attending.</i></string>
    <string name="message_no_internet"> No internet connection </string>
    <string name="message_nothing_to_show"> Nothing to show! </string>
    <string name="message_connecting_to_server"> Connecting to server </string>
    <string name="message_please_connect_internet"> Connect internet to update events. </string>
    <string name="message_search_info"> Please turn on Location Services to search for events near you &#8230; <i><b> Click to enable >> </b></i> </string>
    <string name="str_filter">Filter</string>
    <string name="str_max_distance">Distance(km):</string>

    <string name="str_update">Update</string>
    <string name="str_setting">Setting</string>
    <string name="str_backup_restore">Backup &amp; Restore </string>
    <string name="scan">Scan</string>
    <string name="scan_code">Scan Code</string>
    <string name="str_by">by</string>

    <string name="dev_message">This feature isn\'t available.</string>
    <string name="photo_message" formatted="false">Item #%d was clicked!</string>
    <string name="message">Message</string>
    <string name="already_friends">Friends</string>
    <string name="add_as_friend">Make friends</string>
    <string name="max_distance_hint">(in km)</string>
    <string name="map_search_null">Search string can\'t be null</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="str_WriteAComment">Write a comment</string>
    <string name="str_write_a_comment_while_offline">Write a comment while offline</string>
    <string name="action_settings">Settings</string>

</resources>

