<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_v1">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_centerInParent="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_launcher_blue" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_x2"
            android:layout_marginLeft="@dimen/margin_x2"
            android:layout_marginRight="@dimen/margin_x2"
            android:layout_marginStart="@dimen/margin_x2"
            android:orientation="vertical"
            android:padding="@dimen/margin_x2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AppTheme.TextInputEditText"
                    app:hintTextAppearance="@style/AppTheme.TextInputLayout" />

                <requestFocus />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/AppTheme.TextInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_atop">

                <android.support.design.widget.TextInputEditText
                    android:id="@id/textView_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.TextInputEditText"
                    app:hintTextAppearance="@style/AppTheme.TextInputLayout" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="@dimen/icon_size_x6"
                            android:layout_height="@dimen/icon_size"
                            android:enabled="false"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/ic_vector_facebook" />

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_marginLeft="@dimen/margin"
                            android:layout_marginStart="@dimen/margin"
                            android:enabled="false"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            app:srcCompat="@drawable/ic_vector_google" />

                    </LinearLayout>

                </RelativeLayout>

                <Button
                    android:id="@id/button_ok"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/ic_style_button_round_corners_blue_white"
                    android:enabled="false"
                    android:text="@string/str_login"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_style_button_round_none_default"
            android:clickable="true">

            <android.support.v7.widget.AppCompatTextView
                style="@style/AppTheme.TextView_Title.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_x2"
                android:gravity="center"
                android:text="@string/str_forgotPwd"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

    </LinearLayout>
</layout>